# xai_hackathon_interview_copilot

./: .gitignore  README.md  start.sh
.claude/: CLAUDE.md
backend/: pyproject.toml  test_grok_image_understanding.py  test_x_search.py
backend/online_logs/interview_20251207_111120/: bait_111221.txt  bait_111407.txt  evaluate_111404.txt  evaluate_111455.txt  full_transcript.txt  hint_111227.txt  hint_111411.txt
backend/outputs/: serve_viewer.sh  session_20251206_204144.json  session_20251206_211752.json  session_20251206_213044.json  session_20251206_214111.json  session_20251206_220217.json  session_20251207_021511.json  session_20251207_021619.json  session_20251207_021722.json  session_20251207_021838.json  viewer.html
backend/prompt_store/bait_system_prompt/: HEAD
backend/prompt_store/hint_system_prompt/: HEAD
backend/prompt_store/interview_baseline/: HEAD
backend/src/: app.py
backend/src/common/: __init__.py  config.py  file_utils.py  grok.py  save_session.py  utils.py
backend/src/common/stt/python/: requirements.txt
backend/src/common/xai-voice-examples-main/: package-lock.json
backend/src/offline/: __init__.py  pipeline.py  prompts.py  types.py
backend/src/online/: __init__.py  audio.py  strategies.py  streaming_stt.py
backend/src/prompt/: __init__.py  constant.py  prompt.py  prompt_tuner.py  test.ipynb
backend/src/prompt/baseline_prompts/: bait_prompt_baseline.txt  hint_prompt_baseline.txt  tuner_system_prompt.txt
backend/src/reward/: online_reward.py
data/: README.md  job_description.txt
frontend/: package-lock.json  package.json
(+16 files in other folders)
