[project]
name = "interview-copilot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.7.0",
    "xai-sdk>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "nbformat>=5.10.0",
    "nbconvert>=7.12.0",
    "python-dotenv>=1.2.1",
]